--- a/css/styles.css
+++ b/css/styles.css
@@ -2,7 +2,7 @@ body {
     background-color: #FCF9F7;
     margin: auto;
     padding: 2vw;
-    max-width: 1150px; 
+    max-width: 1200px; 
     color: #424242;
 }
   
